recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:6: error: not found: value lenght
    avance(lenght)
           ^Tree:12: error: not found: value lenght
    recule(lenght)
           ^